--- a/test.css
+++ b/test.css
@@ -3,7 +3,33 @@ p{
 h1{
 }
 #Header{
+		width: 500px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 10px;
 		border: solid 8px black;
+		text-align: center;
+}
+#LeftNav{
+		width: 400px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 10px;
+		border: solid 8px black;
+		float: left;
+		text-align: center;
+}
+#Content{
+		width: 700px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 10px;
+		border: solid 8px black;
+		text-align: center;
+}
+ul{
+		list-style-type: none; 
+		padding-left: 0px
 }
 .Footer{
 }
