--- a/test.css
+++ b/test.css
@@ -18,6 +18,7 @@ h1{
 		border: solid 8px black;
 		float: left;
 		text-align: center;
+		padding-bottom: 8px;
 }
 #Content{
 		width: 700px;
@@ -26,6 +27,7 @@ h1{
 		margin-bottom: 10px;
 		border: solid 8px black;
 		text-align: center;
+		padding: 15px;
 }
 ul{
 		list-style-type: none; 
