--- a/test.css
+++ b/test.css
@@ -1,7 +1,13 @@
+body{
+
+}
+
 p{
+
 }
 
 h1{
+
 }
 
 #Header{
@@ -31,7 +37,6 @@ h1{
 		text-align: center;
 		padding-bottom: 8px;
 		background-color: purple;
-
 }
 
 #Content{
@@ -43,7 +48,6 @@ h1{
 		text-align: center;
 		padding: 15px;
 		background-color: purple;
-
 }
 
 ul{
@@ -65,6 +69,6 @@ a{
 		font-weight: bold;
 		font-size: 24px; 
 }
-.Footer{
+#Footer{
 		background-color: purple;
 }
