--- a/test.css
+++ b/test.css
@@ -70,5 +70,11 @@ a{
 		font-size: 24px; 
 }
 #Footer{
+		width: 500px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 10px;
+		border: solid 8px black;
+		text-align: center;
 		background-color: purple;
 }
